--- a/network.html
+++ b/network.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
-
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <link rel="stylesheet" href="css/style1.css">
 
-    <title>THE STELLAR |Network & Security|Network Access Control Solutions </title>
+    <title>THE STELLAR |Network & Security </title>
 </head>
 
 <body>
@@ -77,7 +77,7 @@
                 <a href="#">Solutions &nbsp;&nbsp;<span><i class="fa fa-angle-down " aria-hidden="true"></i></span></a>
                 <ul>
                     <li>
-                        <a href="#">Infrastructure &nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                        <a href="#">Infrastructure &nbsp;<span><i class="fa fa-angle-down drop-icon"
                                     aria-hidden="true"></i></span></a>
 
                         <ul>
@@ -98,11 +98,11 @@
                     </li>
 
                     <li>
-                        <a href="#"> Covid 19 &nbsp;&nbsp;&nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                        <a href="#"> Covid 19 &nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
                                     aria-hidden="true"></i></span></a>
 
                         <ul>
-                            <li> <a href="#">ESDS Software &nbsp;&nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                            <li> <a href="#">ESDS Software &nbsp;<span><i class="fa fa-angle-down drop-icon"
                                             aria-hidden="true"></i></span></a>
                                 <ul>
                                     <li> <a href="/AA.html">AA+ Covid 19 testing AI Software</a></li>
@@ -110,10 +110,10 @@
 
                                 </ul>
                             </li>
-                            <li> <a href="#">Covid Solutions &nbsp;&nbsp;&nbsp;<span><i
+                            <li> <a href="#">Covid Solutions &nbsp;<span><i
                                             class="fa fa-angle-down drop-icon" aria-hidden="true"></i></span></a>
                                 <ul>
-                                    <li> <a href="/AA.html">Kiosk Solution&nbsp;&nbsp;<span><i
+                                    <li> <a href="/AA.html">Kiosk Solution&nbsp;<span><i
                                                     class="fa fa-angle-down drop-icon"
                                                     aria-hidden="true"></i></span></a>
                                         <ul>
@@ -122,7 +122,7 @@
 
                                         </ul>
                                     </li>
-                                    <li> <a href="#">Wesafetech Solutions&nbsp;&nbsp;<span><i
+                                    <li> <a href="#">Wesafetech Solutions&nbsp;<span><i
                                                     class="fa fa-angle-down drop-icon"
                                                     aria-hidden="true"></i></span></a>
                                         <ul>
@@ -135,7 +135,7 @@
 
                                 </ul>
                             </li>
-                            <li> <a href="#">Airlens Products&nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                            <li> <a href="#">Airlens Products&nbsp;<span><i class="fa fa-angle-down drop-icon"
                                             aria-hidden="true"></i></span></a>
                                 <ul>
                                     <li> <a href="/airlensCar.html"> Airlens Car Air Sanitizer</a></li>
@@ -175,7 +175,7 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item-active">
-                <img class="bd-placeholder-img" width="1600" height="400" src="images2/networking.png"
+                <img class=" img-fluid" width="1600" height="400" src="images2/networking.png"
                     alt="Responsive image">
                 <div class="container">
                     <div class="carousel-caption text-left">
@@ -221,11 +221,11 @@
                     <br>
                     <div class="d-flex">
                         <div class="d-flex text-center">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img
+                            <img
                                 class="card-img-left" src="images2/switching-routing-icon.png" width="40"
                                 height="40" alt="Responsive image">
                         </div>
-                        <h4 class="card-title ">&nbsp;&nbsp;Switching & Routing</h4>
+                        <h4 class="card-title ">Switching & Routing</h4>
                     </div>
                     <p class="card-text text-left ">&nbsp;&nbsp;Our team of experts offers services such as
                         designing,&nbsp;&nbsp;
@@ -241,17 +241,17 @@
                     <br>
                     <div class="d-flex">
                         <div class="d-flex  ">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img
+                            <img
                                 class="card-img-left" src="images2/wireless-icon.png" width="40" height="40"
                                 alt="Responsive image">
                         </div>
-                        <h4 class="card-title ">&nbsp;&nbsp;Wireless Solutions</h4>
+                        <h4 class="card-title ">Wireless Solutions</h4>
                     </div>
                     <p class="card-text text-left">&nbsp;&nbsp;The rapid progress in wireless technologies and
                         solutions,
                         &nbsp;&nbsp;has transformed the way employees work and interact with
                         &nbsp;&nbsp;their colleagues and customers. Employees on the move…&nbsp;&nbsp;</p>
-                    <p><a href="Wireless.html" class="text-success">&nbsp;&nbsp;Learn More</a></p>
+                    <p><a href="wireless.html" class="text-success">&nbsp;&nbsp;Learn More</a></p>
                 </div>
                 <br>
             </div>
@@ -261,11 +261,11 @@
                     <br>
                     <div class="d-flex  ">
                         <div class="d-flex  ">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img
+                            <img
                                 class="card-img-left" src="images2/ip-telephony-icon.png" width="40" height="40"
                                 alt="Responsive image">
                         </div>
-                        <h4 class="card-title ">&nbsp;&nbsp;IP Telephony</h4>
+                        <h4 class="card-title ">IP Telephony</h4>
                     </div>
                     <p class="card-text text-left">&nbsp;&nbsp;IP telephony is an absolute system that offers
                         telephone
@@ -281,11 +281,11 @@
                     <br>
                     <div class="d-flex  ">
                         <div class="d-flex  ">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img
+                            <img
                                 class="card-img-left" src="images2/structured-cabling-icon.png" width="40"
                                 height="40" alt="Responsive image">
                         </div>
-                        <h4 class="card-title ">&nbsp;&nbsp;Structured Cabling</h4>
+                        <h4 class="card-title ">Structured Cabling</h4>
                     </div>
                     <p class="card-text text-left">&nbsp;&nbsp;Our team of professionals provide cabling
                         infrastructure &nbsp;&nbsp;systems, installation and design for projects that are
@@ -300,11 +300,11 @@
                     <br>
                     <div class="d-flex  ">
                         <div class="d-flex  ">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img
+                            <img
                                 class="card-img-left" src="images2/data-center-icon.png" width="40" height="40"
                                 alt="Responsive image">
                         </div>
-                        <h4 class="card-title ">&nbsp;&nbsp;Data Centre Setup</h4>
+                        <h4 class="card-title ">Data Centre Setup</h4>
                     </div>
                     <p class="card-text text-left">&nbsp;&nbsp;Stellar has been influential in the
                         building of corporate data &nbsp;&nbsp;centers for companies in the financial
@@ -319,11 +319,11 @@
                     <br>
                     <div class="d-flex  ">
                         <div class="d-flex  ">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img
+                            <img
                                 class="card-img-left" src="images2/network-access-control.png" width="40"
                                 height="40" alt="Responsive image">
                         </div>
-                        <h4 class="card-title ">&nbsp;&nbsp;Network Access Control</h4>
+                        <h4 class="card-title ">Network Access Control</h4>
                     </div>
                     <p class="card-text text-left">&nbsp;&nbsp;Stellar provides NAC (Network Access Control)
                         solution from &nbsp;&nbsp;Aruba ClearPass. Businesses today embrace the idea of
@@ -339,11 +339,11 @@
                     <br>
                     <div class="d-flex  ">
                         <div class="d-flex  ">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img
+                           <img
                                 class="card-img-left" src="images2/it-compliance-icon.png" width="40"
                                 height="40" alt="Responsive image">
                         </div>
-                        <h4 class="card-title">&nbsp;&nbsp;IT Compliance</h4>
+                        <h4 class="card-title">IT Compliance</h4>
                     </div>
                     <p class="card-text text-left">&nbsp;&nbsp;Compliance is not an issue until it
                         becomes the mother of all &nbsp;&nbsp;issues. IT compliance usually refers
@@ -358,11 +358,11 @@
                     <br>
                     <div class="d-flex  ">
                         <div class="d-flex  ">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img
+                            <img
                                 class="card-img-left" src="images2/info-security-icon.png" width="40"
                                 height="40" alt="Responsive image">
                         </div>
-                        <h4 class="card-title ">&nbsp;&nbsp;Information Security</h4>
+                        <h4 class="card-title ">Information Security</h4>
                     </div>
                     <p class="card-text text-left">&nbsp;&nbsp;Securing networks, servers, notebooks and
                         personal &nbsp;&nbsp;workstations is integral to our Information Security services.
