--- a/cabling.html
+++ b/cabling.html
@@ -69,8 +69,8 @@
                         </ul>
                     </li>
                     <li> <a href="/camera.html">CCTV & Surveillance</a></li>
-                    <li> <a href="/cable.html">Cablings</a></li>
-
+                    
+                    <li> <a href="/network.html">Network & Security</a></li>
                 </ul>
             </li>
             <li>
@@ -98,11 +98,11 @@
                     </li>
 
                     <li>
-                        <a href="#"> Covid 19 &nbsp;&nbsp;&nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                        <a href="#"> Covid 19 &nbsp;&nbsp<span><i class="fa fa-angle-down drop-icon"
                                     aria-hidden="true"></i></span></a>
 
                         <ul>
-                            <li> <a href="#">ESDS Software &nbsp;&nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                            <li> <a href="#">ESDS Software &nbsp;<span><i class="fa fa-angle-down drop-icon"
                                             aria-hidden="true"></i></span></a>
                                 <ul>
                                     <li> <a href="/AA.html">AA+ Covid 19 testing AI Software</a></li>
@@ -110,10 +110,10 @@
 
                                 </ul>
                             </li>
-                            <li> <a href="#">Covid Solutions &nbsp;&nbsp;&nbsp;<span><i
+                            <li> <a href="#">Covid Solutions &nbsp;<span><i
                                             class="fa fa-angle-down drop-icon" aria-hidden="true"></i></span></a>
                                 <ul>
-                                    <li> <a href="/AA.html">Kiosk Solution&nbsp;&nbsp;<span><i
+                                    <li> <a href="/AA.html">Kiosk Solution&nbsp;<span><i
                                                     class="fa fa-angle-down drop-icon"
                                                     aria-hidden="true"></i></span></a>
                                         <ul>
@@ -122,7 +122,7 @@
 
                                         </ul>
                                     </li>
-                                    <li> <a href="#">Wesafetech Solutions&nbsp;&nbsp;<span><i
+                                    <li> <a href="#">Wesafetech Solutions&nbsp;<span><i
                                                     class="fa fa-angle-down drop-icon"
                                                     aria-hidden="true"></i></span></a>
                                         <ul>
@@ -145,9 +145,9 @@
                             </li>
                         </ul>
                     </li>
-                      <li> <a href="/network.html">>Network & Security</a></li>
+                      
                     <li>
-                        <a href="#">Telephony and Unified Communication &nbsp;<span><i
+                        <a href="#">Telephony & Unified Communication&nbsp;<span><i
                                     class="fa fa-angle-down drop-icon" aria-hidden="true"></i></span></a>
 
                         <ul>
@@ -166,9 +166,7 @@
             <li><a href="/contact.html" class="btn btn-outline-danger " target="_self">Get in Touch</a></li>
         </ul>
     </nav>
-    <h3 class="text-dark align-text-center"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Structured Cabling</strong></h3>
-
+   
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -195,7 +193,7 @@
      <div class="container my-4">
         <div class="row featurette d-flex justify-content-center align-items-center">
             <div class="col-md-11 gx-5 mb-4 ">
-                <!--h5 class="text-dark"><strong>Structured Cabling</strong></h5-->
+                <h5 class="text-dark"><strong>Structured Cabling</strong></h5>
                 <p>Our team of professionals provide cabling infrastructure systems, 
                     installation and design for projects that are as small as a 
                     single floor office or as complex as a multi-building campus 
