--- a/wireless.html
+++ b/wireless.html
@@ -175,8 +175,8 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item-active">
-                <img class="bd-placeholder-img" width="1600" height="400"
-                    src="/images/images1/wirelesssolutions1.png" alt="Responsive image">
+                <img class=" img-fluid" width="1600" height="400"
+                    src="images1/wirelesssolutions1.png" alt="Responsive image">
                 <div class="container">
                     <div class="carousel-caption text-left">
                         <div class="carousel-caption text-light">
