--- a/Telephony.html
+++ b/Telephony.html
@@ -174,11 +174,12 @@
         </ul>
     </nav>
 
-
+<br>
+    <br>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            >
+            
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item-active">
@@ -228,7 +229,7 @@
                 </p>
             </div>
         </div>
-        <a class="btn btn-dark btn-rounded"" " href="/network.html" role="button"><h3 class="text-white">Back</h3>
+        <a class="btn btn-dark btn-rounded" href="/network.html" role="button"><h3 class="text-white">Back</h3>
         
     </div>
 
