--- a/displaypanel.html
+++ b/displaypanel.html
@@ -69,8 +69,8 @@
                         </ul>
                     </li>
                     <li> <a href="/camera.html">CCTV & Surveillance</a></li>
-                    <li> <a href="/cable.html">Cablings</a></li>
-
+                    
+                    <li> <a href="/network.html">Network & Security</a></li>
                 </ul>
             </li>
             <li>
