--- a/visual.html
+++ b/visual.html
@@ -174,7 +174,7 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item-active">
-                <img class="bd-placeholder-img bd-placeholder-img-lg mx-auto" width="1600" height="400" src="images2\visual.jpg"
+                <img width="1600" height="400" src="images2\visual.jpg"
                     class="img-fluid">
                 <div class="container">
                     <div class="carousel-caption text-left">
@@ -210,7 +210,7 @@
                     <li> Sharp Video Wall Display & monitors.</li>
 
                 </ul>
-                <a href="/companysite/displaypanel.html" class="btn btn-success ">Explore more MFPs</a>
+                <a href="/displaypanel.html" class="btn btn-success ">Explore more MFPs</a>
             </div>
 
             <div class="clearfix"></div><br>
