--- a/photocopier.html
+++ b/photocopier.html
@@ -50,7 +50,7 @@
                 <a href="#">Products &nbsp;&nbsp;<span><i class="fa fa-angle-down " aria-hidden="true"></i></span></a>
                 <ul>
                     <li>
-                        <a href="#">Office Automation&nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                        <a href="#">Office Automation&nbsp;<span><i class="fa fa-angle-down drop-icon"
                                     aria-hidden="true"></i></span></a>
 
                         <ul>
@@ -60,7 +60,7 @@
                     </li>
                     <li> <a href="/visual.html">Visual Solutions</a></li>
                     <li>
-                        <a href="#">Air Purifiers &nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                        <a href="#">Air Purifiers &nbsp;<span><i class="fa fa-angle-down drop-icon"
                                     aria-hidden="true"></i></span></a>
 
                         <ul>
@@ -69,7 +69,7 @@
                         </ul>
                     </li>
                     <li> <a href="/camera.html">CCTV & Surveillance</a></li>
-                    <li> <a href="/cable.html">Cablings</a></li>
+                    <li> <a href="/network.html">Network & Security</a></li>
 
                 </ul>
             </li>
@@ -77,7 +77,7 @@
                 <a href="#">Solutions &nbsp;&nbsp;<span><i class="fa fa-angle-down " aria-hidden="true"></i></span></a>
                 <ul>
                     <li>
-                        <a href="#">Infrastructure &nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                        <a href="#">Infrastructure &nbsp;<span><i class="fa fa-angle-down drop-icon"
                                     aria-hidden="true"></i></span></a>
 
                         <ul>
@@ -87,7 +87,7 @@
                     </li>
 
                     <li>
-                        <a href="#">Health Care &nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                        <a href="#">Health Care &nbsp;<span><i class="fa fa-angle-down drop-icon"
                                     aria-hidden="true"></i></span></a>
 
                         <ul>
@@ -98,11 +98,11 @@
                     </li>
 
                     <li>
-                        <a href="#"> Covid 19 &nbsp;&nbsp;&nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                        <a href="#"> Covid 19 &nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
                                     aria-hidden="true"></i></span></a>
 
                         <ul>
-                            <li> <a href="#">ESDS Software &nbsp;&nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                            <li> <a href="#">ESDS Software &nbsp;<span><i class="fa fa-angle-down drop-icon"
                                             aria-hidden="true"></i></span></a>
                                 <ul>
                                     <li> <a href="/AA.html">AA+ Covid 19 testing AI Software</a></li>
@@ -110,7 +110,7 @@
 
                                 </ul>
                             </li>
-                            <li> <a href="#">Covid Solutions &nbsp;&nbsp;&nbsp;<span><i
+                            <li> <a href="#">Covid Solutions &nbsp;<span><i
                                             class="fa fa-angle-down drop-icon" aria-hidden="true"></i></span></a>
                                 <ul>
                                     <li> <a href="/AA.html">Kiosk Solution&nbsp;&nbsp;<span><i
@@ -122,7 +122,7 @@
 
                                         </ul>
                                     </li>
-                                    <li> <a href="#">Wesafetech Solutions&nbsp;&nbsp;<span><i
+                                    <li> <a href="#">Wesafetech Solutions&nbsp;<span><i
                                                     class="fa fa-angle-down drop-icon"
                                                     aria-hidden="true"></i></span></a>
                                         <ul>
@@ -135,7 +135,7 @@
 
                                 </ul>
                             </li>
-                            <li> <a href="#">Airlens Products&nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                            <li> <a href="#">Airlens Products&nbsp;<span><i class="fa fa-angle-down drop-icon"
                                             aria-hidden="true"></i></span></a>
                                 <ul>
                                     <li> <a href="/airlensCar.html"> Airlens Car Air Sanitizer</a></li>
@@ -169,6 +169,7 @@
 
     <div class="container my-4">
         <h5>Digital MFPs </h5>
+        <br>
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb ">
                 <li class="breadcrumb-item active" aria-current="page"><strong>Stellar Offers a wide range of Digital
@@ -178,9 +179,10 @@
             </ol>
         </nav>
         <div class="clearfix"></div><br>
-        <div class="d-flex justify-content-between">
-            <div class="col">
-                <div class="card h-100">
+        <!--div class="d-flex justify-content-between"-->
+          <div class="row row-cols-2 row-cols-sm-3 g-4">
+            <div class="col-sm-5">
+                <div class="card">
                     <a href="/MXB350pz.html">
                         <img src="images3\Nano_Printer_JPEG_MX_B450P_front.jpg" class="card-img-top" width="200" height="300"
                             alt="Responsive image" />
@@ -198,10 +200,11 @@
                         </p>
 
                     </div>
+                    <br>
                 </div>
             </div>
-            <div class="col">
-                <div class="card h-100">
+             <div class="col-sm-5">
+                <div class="card ">
                     <a href="/MXB350wz.html">
                         <img src="images3/Nano_MFP_Asia_JPEG_MX_B350F_front.jpg" class="card-img-top" width="200" height="300"
                             alt="Responsive image" />
@@ -216,12 +219,13 @@
                         </p>
 
                     </div>
+                    <br>
                 </div>
             </div>
 
 
-            <div class="col">
-                <div class="card h-100">
+             <div class="col-sm-5">
+                <div class="card ">
                     <a href="/ar6020DV.html">
                         <img src="images1/AR_6023DV_slant.jpg" class="card-img-top" width="200" height="300"
                             alt="Responsive image" />
@@ -237,8 +241,8 @@
                     </div>
                 </div>
             </div>
-            <div class="clearfix"></div><br>
-            <div class="col">
+            <br>
+             <div class="col-sm-5">
                 <div class="card h-100">
                     <a href="/ar6020nv.html">
                         <img src="images1/AR_6023NV_slant.jpg" class="card-img-top" width="200" height="300" alt="Responsive image" />
@@ -251,15 +255,14 @@
                                     PDF</strong></a>
                         </p>
                     </div>
+                    <br>
                 </div>
             </div>
 
         </div>
-        <div class="clearfix"></div><br>
-        <div class="clearfix"></div><br>
+        <br>
 
-        <div class="d-flex justify-content-between">
-            <div class="col">
+         <div class="col-sm-5">
                 <div class="card h-100">
                     <a href="/MX2651.html">
                         <img src="images3/MX_2651_LSITING_PAGE.jpg" class="card-img-top" width="200" height="300"
@@ -277,9 +280,11 @@
                         </p>
 
                     </div>
+                    <br>
                 </div>
             </div>
-            <div class="col">
+           <br>
+            <div class="col-sm-5">
                 <div class="card h-100">
                     <a href="/MX3560V.html">
                         <img src="images3\MX_3560V_FN29_slant.jpg" class="card-img-top" width="200" height="300"
@@ -295,10 +300,11 @@
                         </p>
 
                     </div>
+                    <br>
                 </div>
             </div>
-
-            <div class="col">
+               <br>
+             <div class="col-sm-5">
                 <div class="card h-100">
                     <a href="/MX4070V.html">
                         <img src="images3/MX_4070V_FN31_full_front.jpg" class="card-img-top" width="200" height="300"
@@ -314,6 +320,7 @@
                         </p>
 
                     </div>
+                    <br>
                 </div>
             </div>
 
