--- a/photocopier.html
+++ b/photocopier.html
@@ -172,9 +172,9 @@
         <br>
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb ">
-                <li class="breadcrumb-item active" aria-current="page"><strong>Stellar Offers a wide range of Digital
+                <li class="breadcrumb-item active" aria-current="page"><strong>h6 class="text-white">Stellar Offers a wide range of Digital
                         Monochrome and Color Multifunction Printers. Models are designed
-                        with configurations catering to variety of Business needs.</strong>
+                    with configurations catering to variety of Business needs.</h6></strong>
                 </li>
             </ol>
         </nav>
