--- a/displaypanel.html
+++ b/displaypanel.html
@@ -173,9 +173,9 @@
         <br>
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item active" aria-current="page"><strong>Stellar's professional and commercial
+                <li class="breadcrumb-item active" aria-current="page"><strong>h6 class="text-white">Stellar's professional and commercial
                         displays are specially engineered for business applications and are offered in a wide range
-                        of sizes and varying capabilities.</strong>
+                    of sizes and varying capabilities.</h6></strong>
                 </li>
             </ol>
         </nav>
