--- a/photocopier.html
+++ b/photocopier.html
@@ -1,17 +1,19 @@
 <!doctype html>
 <html lang="en" wtx-context="85E22057-6FDD-4C85-80C5-F63AE3592470">
+
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="Keywords" content="X-Ray,Photocpiers(MFPs),Printers,Covid 19 solutions,Covid 19 Software,HP Series(EPABX)">
+    <meta name="Keywords"
+        content="X-Ray,Photocpiers(MFPs),Printers,Covid 19 solutions,Covid 19 Software,HP Series(EPABX)">
     <meta property="og:title" content="The Stellar | One Stop solution that Builds great experiences for your brand ">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style1.css">
 
     <title>THE STELLAR|Office Solutions|Photocopiers </title>
@@ -20,8 +22,8 @@
 <body>
 
 
-  <nav>
-        <a href="index.html"  class="logo">THE STELLAR</a>
+    <nav>
+        <a href="index.html" class="logo">THE STELLAR</a>
 
         <input type="checkbox" id="box">
         <label for="box">
@@ -35,7 +37,7 @@
                             aria-hidden="true"></i></span></a>
                 <ul>
                     <li> <a href="/blog.html">Blog</a></li>
-                    
+
                 </ul>
             </li>
 
@@ -110,8 +112,8 @@
 
                                 </ul>
                             </li>
-                            <li> <a href="#">Covid Solutions &nbsp;<span><i
-                                            class="fa fa-angle-down drop-icon" aria-hidden="true"></i></span></a>
+                            <li> <a href="#">Covid Solutions &nbsp;<span><i class="fa fa-angle-down drop-icon"
+                                            aria-hidden="true"></i></span></a>
                                 <ul>
                                     <li> <a href="/AA.html">Kiosk Solution&nbsp;&nbsp;<span><i
                                                     class="fa fa-angle-down drop-icon"
@@ -154,8 +156,8 @@
 
                         </ul>
                     </li>
-                    <li> 
-                        <a  href="/hp.html">HP Series (EPABX) </a>
+                    <li>
+                        <a href="/hp.html">HP Series (EPABX) </a>
                     </li>
 
                 </ul>
@@ -172,20 +174,21 @@
         <br>
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb ">
-                <li class="breadcrumb-item active" aria-current="page"><strong>h6 class="text-white">Stellar Offers a wide range of Digital
+                <li class="breadcrumb-item active" aria-current="page"><strong>h6 class="text-white">Stellar Offers a
+                        wide range of Digital
                         Monochrome and Color Multifunction Printers. Models are designed
-                    with configurations catering to variety of Business needs.</h6></strong>
+                        with configurations catering to variety of Business needs.</h6></strong>
                 </li>
             </ol>
         </nav>
         <div class="clearfix"></div><br>
         <!--div class="d-flex justify-content-between"-->
-          <div class="row row-cols-2 row-cols-sm-3 g-4">
+        <div class="row row-cols-2 row-cols-sm-3 g-4">
             <div class="col-sm-5">
                 <div class="card">
                     <a href="/MXB350pz.html">
-                        <img src="images3\Nano_Printer_JPEG_MX_B450P_front.jpg" class="card-img-top" width="200" height="300"
-                            alt="Responsive image" />
+                        <img src="images3\Nano_Printer_JPEG_MX_B450P_front.jpg" class="card-img-top" width="200"
+                            height="300" alt="Responsive image" />
                     </a>
 
                     <div class="card-body">
@@ -193,7 +196,8 @@
 
                         <p><strong> Technical data of MX-B350PZ photocopier </strong><a href="pdf\MX-B450P-B350P.pdf"
                                 title="MX-B350PZ" target="_blank" class="btn btn-small" href="#">
-                                <img src="images3\pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
+                                <img src="images3\pdficon.png" width="30" height="30"
+                                    alt="Responsive image"><strong>Download
                                     PDF</strong></a>
 
 
@@ -203,17 +207,18 @@
                     <br>
                 </div>
             </div>
-             <div class="col-sm-5">
+            <div class="col-sm-5">
                 <div class="card ">
                     <a href="/MXB350wz.html">
-                        <img src="images3/Nano_MFP_Asia_JPEG_MX_B350F_front.jpg" class="card-img-top" width="200" height="300"
-                            alt="Responsive image" />
+                        <img src="images3/Nano_MFP_Asia_JPEG_MX_B350F_front.jpg" class="card-img-top" width="200"
+                            height="300" alt="Responsive image" />
                     </a>
                     <div class="card-body">
                         <h5 class="card-title">A4 Monochrome MFP</h5>
                         <p><strong> Technical data of MX-B350WZ photocopier </strong> <a href="pdf/AR-6020V.pdf"
                                 title="MX-B350WZ" target="_blank" class="btn btn-small" href="#">
-                                <img src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
+                                <img src="images3/pdficon.png" width="30" height="30"
+                                    alt="Responsive image"><strong>Download
                                     PDF</strong></a>
 
                         </p>
@@ -223,8 +228,8 @@
                 </div>
             </div>
 
-
-             <div class="col-sm-5">
+            <br>
+            <div class="col-sm-5">
                 <div class="card ">
                     <a href="/ar6020DV.html">
                         <img src="images1/AR_6023DV_slant.jpg" class="card-img-top" width="200" height="300"
@@ -234,24 +239,28 @@
                         <h5 class="card-title">A3 monochrome MFP </h5>
                         <p><strong> Technical data of AR_6020DV photocopier </strong> <a href="pdf/AR-6020DV_BRO.pdf"
                                 title="AR_6020DV" target="_blank" class="btn btn-small" href="#">
-                                <img src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
+                                <img src="images3/pdficon.png" width="30" height="30"
+                                    alt="Responsive image"><strong>Download
                                     PDF</strong></a>
                         </p>
 
                     </div>
+                    <br>
                 </div>
             </div>
             <br>
-             <div class="col-sm-5">
+            <div class="col-sm-5">
                 <div class="card h-100">
                     <a href="/ar6020nv.html">
-                        <img src="images1/AR_6023NV_slant.jpg" class="card-img-top" width="200" height="300" alt="Responsive image" />
+                        <img src="images1/AR_6023NV_slant.jpg" class="card-img-top" width="200" height="300"
+                            alt="Responsive image" />
                     </a>
                     <div class="card-body">
                         <h5 class="card-title">A3 Monochrome MFP</h5>
                         <p><strong> Technical data of AR_6020NV photocopier </strong> <a href="pdf/AR-6020NV.pdf"
                                 title="AR_6031NV" target="_blank" class="btn btn-small" href="#">
-                                <img src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
+                                <img src="images3/pdficon.png" width="30" height="30"
+                                    alt="Responsive image"><strong>Download
                                     PDF</strong></a>
                         </p>
                     </div>
@@ -259,10 +268,10 @@
                 </div>
             </div>
 
-        </div>
-        <br>
 
-         <div class="col-sm-5">
+            <br>
+
+            <div class="col-sm-5">
                 <div class="card h-100">
                     <a href="/MX2651.html">
                         <img src="images3/MX_2651_LSITING_PAGE.jpg" class="card-img-top" width="200" height="300"
@@ -274,7 +283,8 @@
                         <p><strong> Technical data of MX_2651 photocopier </strong><a
                                 href="pdf/MX-6051-5051-4051-3551-3051-2651.pdf" title="MX_2651" target="_blank"
                                 class="btn btn-small" href="#">
-                                <img src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
+                                <img src="images3/pdficon.png" width="30" height="30"
+                                    alt="Responsive image"><strong>Download
                                     PDF</strong></a>
 
                         </p>
@@ -283,7 +293,7 @@
                     <br>
                 </div>
             </div>
-           <br>
+            <br>
             <div class="col-sm-5">
                 <div class="card h-100">
                     <a href="/MX3560V.html">
@@ -292,9 +302,11 @@
                     </a>
                     <div class="card-body">
                         <h5 class="card-title">A3 Business Color MFP </h5>
-                        <p><strong> Technical data of MX-3560V photocopier </strong> <a href="pdf/MX-3560_3060V_BRO_RV3.pdf"
-                                title="MX-3560V" target="_blank" class="btn btn-small" href="#">
-                                <img src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
+                        <p><strong> Technical data of MX-3560V photocopier </strong> <a
+                                href="pdf/MX-3560_3060V_BRO_RV3.pdf" title="MX-3560V" target="_blank"
+                                class="btn btn-small" href="#">
+                                <img src="images3/pdficon.png" width="30" height="30"
+                                    alt="Responsive image"><strong>Download
                                     PDF</strong></a>
 
                         </p>
@@ -303,8 +315,8 @@
                     <br>
                 </div>
             </div>
-               <br>
-             <div class="col-sm-5">
+            <br>
+            <div class="col-sm-5">
                 <div class="card h-100">
                     <a href="/MX4070V.html">
                         <img src="images3/MX_4070V_FN31_full_front.jpg" class="card-img-top" width="200" height="300"
@@ -314,7 +326,8 @@
                         <h5 class="card-title">A3 Business advanced colour MFP</h5>
                         <p><strong> Technical data of MX-4070V photocopier </strong> <a href="pdf\MX-4070V_BRO.pdf"
                                 title="MX-3560V" target="_blank" class="btn btn-small" href="#">
-                                <img src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
+                                <img src="images3/pdficon.png" width="30" height="30"
+                                    alt="Responsive image"><strong>Download
                                     PDF</strong></a>
 
                         </p>
@@ -325,10 +338,13 @@
             </div>
 
         </div>
-        <a class="btn btn-dark btn-rounded"" " href="/office.html" role="button"><h3 class="text-white">Back</h3>
-           </a>
+        <br>
+        <br>
+        <a class="btn btn-dark btn-rounded" href="/office.html" role="button">
+            <h3 class="text-white">Back</h3>
+        </a>
 
-      
+
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
