--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
                                     aria-hidden="true"></i></span></a>
 
                         <ul>
+                            <li> <a href="/pcr.html">Patho_Detect RT-PCR Test</a></li>
+                            <li> <a href="/antigen.html">Patho_Catch Antigen Test</a></li>
+                            <li> <a href="/compact.html">COMPACT XL</a></li>
                             <li> <a href="#">ESDS Software &nbsp;<span><i class="fa fa-angle-down drop-icon"
                                             aria-hidden="true"></i></span></a>
                                 <ul>
