--- a/compact.html
+++ b/compact.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="style1.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>THE STELLAR | Emerging leader </title>
+    <title>THE STELLAR|Covid19|Compact XL</title>
 </head>
 
 <body>
@@ -60,7 +60,7 @@
                     </li>
                     <li> <a href="/visual.html">Visual Solutions</a></li>
                     <li>
-                        <a href="#">Air Purifiers &nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                        <a href="#">Air Purifiers&nbsp;<span><i class="fa fa-angle-down drop-icon"
                                     aria-hidden="true"></i></span></a>
 
                         <ul>
@@ -77,7 +77,7 @@
                 <a href="#">Solutions&nbsp;&nbsp;<span><i class="fa fa-angle-down " aria-hidden="true"></i></span></a>
                 <ul>
                     <li>
-                        <a href="#">&nbsp;&nbsp;Infrastructure <span><i class="fa fa-angle-down drop-icon"
+                        <a href="#">Infrastructure&nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
                                     aria-hidden="true"></i></span></a>
 
                         <ul>
@@ -115,10 +115,10 @@
 
                                 </ul>
                             </li>
-                            <li> <a href="#">Covid Solutions &nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                            <li> <a href="#">Covid Solutions &nbsp;<span><i class="fa fa-angle-down drop-icon"
                                             aria-hidden="true"></i></span></a>
                                 <ul>
-                                    <li> <a href="/AA.html">Kiosk Solution&nbsp;&nbsp;<span><i
+                                    <li> <a href="/AA.html">Kiosk Solution&nbsp;<span><i
                                                     class="fa fa-angle-down drop-icon"
                                                     aria-hidden="true"></i></span></a>
                                         <ul>
@@ -127,7 +127,7 @@
 
                                         </ul>
                                     </li>
-                                    <li> <a href="#">Wesafetech Solutions&nbsp;&nbsp;<span><i
+                                    <li> <a href="#">Wesafetech Solutions&nbsp;<span><i
                                                     class="fa fa-angle-down drop-icon"
                                                     aria-hidden="true"></i></span></a>
                                         <ul>
@@ -140,7 +140,7 @@
 
                                 </ul>
                             </li>
-                            <li> <a href="#">Airlens Products&nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                            <li> <a href="#">Airlens Products&nbsp;<span><i class="fa fa-angle-down drop-icon"
                                             aria-hidden="true"></i></span></a>
                                 <ul>
                                     <li> <a href="/airlensCar.html"> Airlens Car Air Sanitizer</a></li>
@@ -151,7 +151,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#">Telephony and Unified Communication &nbsp;<span><i
+                        <a href="#">Telephony & Unified Communication&nbsp;<span><i
                                     class="fa fa-angle-down drop-icon" aria-hidden="true"></i></span></a>
 
                         <ul>
@@ -179,7 +179,7 @@
         <div class="carousel-inner">
             <div class="carousel-item-active">
                 <img  width="1600" height="400"
-                    src="images/images4/mylab.jpg" class="img-fluid">
+                    src="images4/mylab.jpg" class="img-fluid" alt="Responsive image">
                 <div class="container">
                     <div class="carousel-caption text-left">
 
@@ -207,7 +207,7 @@
                     Compact xL, as a complete walk-away system..</p>
             </div>
             <div class="col-md-6">
-                <img width="500" height="500" src="images/images4/compact.png" alt="Responsive image" class="img-fluid">
+                <img width="500" height="500" src="images4/compact.png" alt="Responsive image" class="img-fluid">
             </div>
         </div>
         <div class="row featurette d-flex justify-content-center align-items-center">
@@ -263,7 +263,7 @@
                 </ul>
                 <p> <a href="pdf/Compact_XL.pdf">
 
-                        <img src="images/images3/pdficon.png" width="30" height="30"
+                        <img src="images3/pdficon.png" width="30" height="30"
                             alt="Responsive image"><strong>Download
                             PDF</strong></a>
                 </p>
@@ -276,9 +276,8 @@
 
 
     </div>
-    <a class="nav-link" href="/index.html">
-        <h3 class="text-dark">Back</h3>
-    </a>
+     <a class="btn btn-dark btn-rounded" href="/index.html" role="button"><h3 class="text-white">Back</h3>
+           </a>
     </div>
 
     <script>
