--- a/wireless.html
+++ b/wireless.html
@@ -218,9 +218,9 @@
                 </p>
             </div>
         </div>
-        <a class="nav-link" href="/network.html">
-            <h3 class="text-dark">Back</h3>
-        </a>
+        
+        <a class="btn btn-dark btn-rounded" href="/network.html" role="button"><h3 class="text-white">Back</h3>
+           </a> 
     </div>
    
 
