--- a/av.html
+++ b/av.html
@@ -181,7 +181,7 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item-active">
-                <img class="bd-placeholder-img bd-placeholder-img-lg mx-auto" width="1600" height="400" src="images1\AV.jpg"
+                <img width="1600" height="400" src="images1\AV.jpg" alt="Responsive image"
                     class="img-fluid">
                 <div class="container">
                     <div class="carousel-caption text-left">
