--- a/air.html
+++ b/air.html
@@ -183,7 +183,7 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="bd-placeholder-img " width="1600" height="600"
+                    <img alt="Responsive image" width="1600" height="600"
                         src="images1/air-purification.jpeg" class="img-fluid">
                     <div class="container">
                         <div class="carousel-caption text-left">
