--- a/car.html
+++ b/car.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="css/pop.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
+ 
    <link rel="stylesheet" href="css/style1.css">
 
 
@@ -174,7 +174,7 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item-active">
-                <img class="bd-placeholder-img bd-placeholder-img-lg mx-auto" width="1600" height="400"
+                <img  width="1600" height="400" alt="Responsive image"
                     src="images1\car-air-purifier-a.jpg" class="img-fluid">
                 <div class="container">
                     <div class="carousel-caption text-left">
