--- a/av.html
+++ b/av.html
@@ -207,7 +207,8 @@
                         Streme, Da-Lite, B-tech, etc. in order to provide cutting edge technology solutions.
 
                     </p>
-                    <img src="images2\smart-av-internal-img.png" width="500" height="500" alt="Responsive image">
+                    <img src="images2\smart-av-internal-img.png" width="500" height="500" class="img-fluid" alt="Responsive image">
+                    
                     <p> We specialize in designing & building large and complex audio-visual projects. The designing is
                         done in a futuristic way which enables the customer to adapt to changing technologies by making
                         a minor modification in contrast to traditional rip-and-replace approach. We follow a very
