--- a/sono.html
+++ b/sono.html
@@ -174,7 +174,7 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item-active">
-                <img class="bd-placeholder-img bd-placeholder-img-lg mx-auto" width="1600" height="400" src="images2/sono1.jpeg"
+                <img  width="1600" height="400" src="images2/sono1.jpeg"
                     class="img-fluid">
                 <div class="container">
                     <div class="carousel-caption text-left">
@@ -213,6 +213,7 @@
                 <img width="500" height="500" src="images2/ultrasound-machine-500x500.jpg" class="img-fluid">
             </div>
         </div>
+        <br>
       <a class="btn btn-dark btn-rounded"  href="/index.html" role="button"><h3 class="text-white">Back</h3>
            </a>
 
