--- a/unified.html
+++ b/unified.html
@@ -11,7 +11,7 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 
-
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="css/style1.css">
 
@@ -182,11 +182,11 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item-active">
-                <img class="bd-placeholder-img bd-placeholder-img-lg mx-auto" width="1600" height="400"
+                <img  width="1600" height="400" alt="Responsive image"
                     src="images2/unified-communications-analytics.jpg" class="img-fluid">
                 <div class="container">
                     <div class="carousel-caption text-left">
-                        <h1>Telephony and Unified Communications</h1>
+                        <h4>Telephony and Unified Communications</h4>
 
                     </div>
                 </div>
