--- a/office.html
+++ b/office.html
@@ -180,7 +180,7 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item-active">
-                    <img class="bd-placeholder-img bd-placeholder-img-lg mx-auto" width="1600" height="400"
+                    <img  width="1600" height="400"
                         src="images3\off.jpg" class="img-fluid">
                     <div class="container">
                         <div class="carousel-caption text-left">
