--- a/photocopier.html
+++ b/photocopier.html
@@ -171,10 +171,10 @@
 
     <div class="container my-4">
         <h5>Digital MFPs </h5>
-        <br>
+       
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb ">
-                <li class="breadcrumb-item active" aria-current="page"><strong>h6 class="text-white">Stellar Offers a
+                <li class="breadcrumb-item active" aria-current="page"><strong><h6 class="text-white">Stellar Offers a
                         wide range of Digital
                         Monochrome and Color Multifunction Printers. Models are designed
                         with configurations catering to variety of Business needs.</h6></strong>
