--- a/displaypanel.html
+++ b/displaypanel.html
@@ -169,11 +169,12 @@
 
 
     <div class="container my-4">
-        <h3><strong>Information Display Panel</strong></h3>
+        <h4><strong>Information Display Panel</strong></h4>
+        <br>
         <br>
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item active" aria-current="page"><strong>h6 class="text-white">Stellar's professional and commercial
+                <li class="breadcrumb-item active" aria-current="page"><strong><h6 class="text-white">Stellar's professional and commercial
                         displays are specially engineered for business applications and are offered in a wide range
                     of sizes and varying capabilities.</h6></strong>
                 </li>
