--- a/Airpurifier.html
+++ b/Airpurifier.html
@@ -177,14 +177,17 @@
 
 
     <div class="container my-4">
+         <h5>Air Purifiers </h5>
+         <br>
+         <br>
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb ">
                 <li class="breadcrumb-item"><a class="black-text" href="/air.html">Air Purifiers</a></li>
 
 
-                <li class="breadcrumb-item active" aria-current="page"><strong>Stellar brings you a wide range of Air
+                <li class="breadcrumb-item active" aria-current="page"><strong><h6 class="text-white">Stellar brings you a wide range of Air
                         Purifiers to breathe clean
-                        and healthy air wherever life takes you</strong>
+                     and healthy air wherever life takes you</h6></strong>
                 </li>
             </ol>
         </nav>
