--- a/car.html
+++ b/car.html
@@ -194,12 +194,13 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a class="black-text" href="/car.html">Air Purifiers</a></li>
-                <li class="breadcrumb-item active" aria-current="page"><strong>Your car is your 2nd place where we spend more amount of time in it. Therefore it is important that you take care of your
-                        health and experience whenever you are in.
+                <li class="breadcrumb-item active" aria-current="page"><strong><h6 class="text-white">Your car is your 2nd place where we spend more amount of time in it. Therefore it is important that you take care of your
+                    health and experience whenever you are in.</h6></strong>
                 </li>
             </ol>
         </nav>
-        <div class="clearfix"></div><br>
+        <br>
+        <br>
         <div class="row row-cols-1 row-cols-sm-3 g-4">
 
             <div class="d-flex justify-content-center ">
