--- a/AA.html
+++ b/AA.html
@@ -224,7 +224,7 @@
                 </p>
                 <p> <a href="pdf/Technical Document - AA+Covid-19 Testing Solution .pdf"
                         title="AA+ COVID-19 Testing Solution" target="_blank" class="btn btn-small" href="#">
-                        <img class="img-fluid src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
+                        <img  src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
                             PDF</strong></a>
             </div>
 
