--- a/AA1.html
+++ b/AA1.html
@@ -181,7 +181,7 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item-active">
-                <img class="bd-placeholder-img " width="1600" height="400"
+                <img  width="1600" height="400"
                     src="images1/COVID-19.jpg" class="img-fluid" alt="Responsive image>
                 <div class="container">
                     <div class="carousel-caption text-left ">
@@ -223,7 +223,7 @@
                 </p>
                 <p> <a href="pdf/White paper - AA+Covid-19 Testing Solution v1.2 (1).pdf"
                         title="AA+ COVID-19 Testing Solution" target="_blank" class="btn btn-small" href="#">
-                        <img  class="img-fluid" src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
+                        <img   src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong>Download
                             PDF</strong></a>
             </div>
 
