--- a/airlensmask.html
+++ b/airlensmask.html
@@ -175,7 +175,7 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item-active">
-                <img class="bd-placeholder-img" width="1600" height="300" src="images1/Front Mask.jpg"
+                <img  width="1600" height="300" src="images1/Front Mask.jpg"
                     alt="Responsive image">
                 <div class="container">
                     <div class="carousel-caption text-left ">
