--- a/handy.html
+++ b/handy.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
-
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
  <link rel="stylesheet" href="css/style1.css">
 
@@ -174,7 +174,7 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item-active">
-                <img class="bd-placeholder-img" width="1600" height="300" src="images3/med3.jpg" alt="Responsive image">
+                <img class="img-fluid"  width="1600" height="300" src="images3/med3.jpg" alt="Responsive image">
                 <div class="container">
                     <div class="carousel-caption text-left">
                         <div class="carousel-caption text-warning">
