--- a/safe.html
+++ b/safe.html
@@ -11,6 +11,7 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
  <link rel="stylesheet" href="css/style1.css">
@@ -295,7 +296,7 @@
             </div>
             <div class="col-md-5 order-md-1">
                 <div class="w3-container w3-center w3-animate-right">
-                    <img class="bd-placeholder-img bd-placeholder-img-lg mx-auto" width="300" height="300"  
+                    <img width="300" height="300"  
                         src="images3/No_Image_Available.png" class="img-fluid">
                 </div>
             </div>
