--- a/wellsafeapp.html
+++ b/wellsafeapp.html
@@ -11,6 +11,7 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
    <link rel="stylesheet" href="css/style1.css">
@@ -177,16 +178,16 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item-active">
-                <img class="bd-placeholder-img" width="1600" height="300" src="images1/contact_tracing3.jpg"
+                <img  width="1600" height="300" src="images1/contact_tracing3.jpg"
                      class="img-fluid" alt="Responsive image">
                 <div class="container">
                     <div class="carousel-caption text-left">
                         <div class="carousel-caption text-primary">
 
-                            <h1 class="text-right"><strong>CONTACT TRACING
+                            <h4 class="text-right"><strong>CONTACT TRACING
                                     DASHBOARD </strong>
                                 <footer class="blockquote-footer text-dark"> <cite>Better Solution</cite></footer>
-                            </h1>
+                            </h4>
 
                         </div>
                     </div>
