--- a/wellsafeapp.html
+++ b/wellsafeapp.html
@@ -186,7 +186,7 @@
 
                             <h4 class="text-right"><strong>CONTACT TRACING
                                     DASHBOARD </strong>
-                                <footer class="blockquote-footer text-dark"> <cite>Better Solution</cite></footer>
+                                <footer class="blockquote-footer text-light"> <cite>Better Solution</cite></footer>
                             </h4>
 
                         </div>
